@@ -13,12 +13,12 @@ import org.elasticsearch.xpack.core.ml.inference.results.TopClassEntry;
 import org.elasticsearch.xpack.core.ml.inference.results.WarningInferenceResults;
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.FillMaskConfig;
 import org.elasticsearch.xpack.core.ml.inference.trainedmodel.NlpConfig;
+import org.elasticsearch.xpack.core.ml.utils.ExceptionsHelper;
 import org.elasticsearch.xpack.ml.inference.deployment.PyTorchResult;
 import org.elasticsearch.xpack.ml.inference.nlp.tokenizers.NlpTokenizer;
 import org.elasticsearch.xpack.ml.inference.nlp.tokenizers.TokenizationResult;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -35,19 +35,19 @@ public class FillMaskProcessor implements NlpTask.Processor {
     @Override
     public void validateInputs(List<String> inputs) {
         if (inputs.isEmpty()) {
-            throw new IllegalArgumentException("input request is empty");
+            throw ExceptionsHelper.badRequestException("input request is empty");
         }
 
         final String mask = tokenizer.getMaskToken();
         for (String input : inputs) {
             int maskIndex = input.indexOf(mask);
             if (maskIndex < 0) {
-                throw new IllegalArgumentException("no " + mask + " token could be found");
+                throw ExceptionsHelper.badRequestException("no {} token could be found", mask);
             }
 
             maskIndex = input.indexOf(mask, maskIndex + mask.length());
             if (maskIndex > 0) {
-                throw new IllegalArgumentException("only one " + mask + " token should exist in the input");
+                throw ExceptionsHelper.badRequestException("only one {} token should exist in the input", mask);
             }
         }
     }
@@ -59,8 +59,7 @@ public class FillMaskProcessor implements NlpTask.Processor {
 
     @Override
     public NlpTask.ResultProcessor getResultProcessor(NlpConfig config) {
-        if (config instanceof FillMaskConfig) {
-            FillMaskConfig fillMaskConfig = (FillMaskConfig) config;
+        if (config instanceof FillMaskConfig fillMaskConfig) {
             return (tokenization, result) -> processResult(
                 tokenization,
                 result,
@@ -91,7 +90,7 @@ public class FillMaskProcessor implements NlpTask.Processor {
         }
 
         if (tokenizer.getMaskTokenId().isEmpty()) {
-            return new WarningInferenceResults(
+            throw ExceptionsHelper.conflictStatusException(
                 "The token id for the mask token {} is not known in the tokenizer. Check the vocabulary contains the mask token",
                 tokenizer.getMaskToken()
             );
@@ -109,7 +108,7 @@ public class FillMaskProcessor implements NlpTask.Processor {
             return new WarningInferenceResults(
                 "mask token id [{}] not found in the tokenization {}",
                 maskTokenId,
-                Arrays.asList(tokenization.getTokenizations().get(0).getTokenIds())
+                List.of(tokenization.getTokenizations().get(0).getTokenIds())
             );
         }
 
